--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Exclude kitchen files
+.kitchen/
+
+# Exclude rbenv files
+.ruby-version
+
+# Exclude bundler lock file
+Gemfile.lock
