--- a/test/integration/default-input/inspec.yml
+++ b/test/integration/default-input/inspec.yml
@@ -1,5 +1,5 @@
 ---
-name: default
+name: default-input
 title: Test Module Default input
 summary: Will check that the modules produces the expected value without user input.
 version: 0.1.0
